@@ -107,15 +107,6 @@ FOREACH(AM ${ADDITIONAL_MODULES})
   SET(ENABLE_${AM} TRUE CACHE INTERNAL "Select additional module ${AM}?")
 ENDFOREACH(AM ${ADDITIONAL_MODULES})
 
-SET(populator ${BASE_BINARY_DIR}${REL_DIR}src_generated/PopulateDrivers.cpp)
-
-IF (COMPILING_ALL_YARP)
-  CONFIGURE_FILE(${BASE_SOURCE_DIR}${REL_DIR}${REL_SRC}PopulateDrivers.cpp.in
-    ${populator} @ONLY  IMMEDIATE)
-ELSE (COMPILING_ALL_YARP)
-  WRITE_FILE(${populator} "")
-ENDIF (COMPILING_ALL_YARP)
-
 # any non-driver-specific source code
 #AUX_SOURCE_DIRECTORY(src libcode_general)
 FILE(GLOB libcode_general ${REL_SRC}*.cpp)
@@ -216,6 +207,29 @@ ELSE (NOT COMPILING_ALL_YARP)
   ENDIF (EXISTS ${EXTERNAL_MODULES_FILE})
 ENDIF (NOT COMPILING_ALL_YARP)
 
+IF (CREATE_DEVICE_LIBRARY_MODULES OR NEW_METHOD)
+  # inhibit old compilation method
+  SET (EXTERNAL_MODULES)
+  SET (HACK_POPULATE_DRIVERS FALSE)
+ELSE (CREATE_DEVICE_LIBRARY_MODULES OR NEW_METHOD)
+  SET (HACK_POPULATE_DRIVERS TRUE)
+  SET (EMBED_DEVICE_LIBRARY_CALL TRUE)
+ENDIF (CREATE_DEVICE_LIBRARY_MODULES OR NEW_METHOD)
+
+
+IF (CREATE_DEVICE_LIBRARY_BUILTINS)
+  SET (EMBED_DEVICE_LIBRARY_CALL TRUE)
+ENDIF (CREATE_DEVICE_LIBRARY_BUILTINS)
+
+SET(populator ${BASE_BINARY_DIR}${REL_DIR}src_generated/PopulateDrivers.cpp)
+
+IF (COMPILING_ALL_YARP)
+  CONFIGURE_FILE(${BASE_SOURCE_DIR}${REL_DIR}${REL_SRC}PopulateDrivers.cpp.in
+    ${populator} @ONLY  IMMEDIATE)
+ELSE (COMPILING_ALL_YARP)
+  WRITE_FILE(${populator} "")
+ENDIF (COMPILING_ALL_YARP)
+
 IF (EXTERNAL_MODULES)
   ## parse the list of modules
   FOREACH(MOD ${EXTERNAL_MODULES})
@@ -265,7 +279,7 @@ ENDIF(EXTERNAL_MODULES)
 ### patch PopulateDrivers.cpp
 #### Changed this to run only if needed - it is order sensitive, and use 
 #### of WRITE_FILE leads to unneeded compiles --paulfitz
-IF (EXISTS ${EXTERNAL_MODULES_FILE})
+IF (HACK_POPULATE_DRIVERS)
 WRITE_FILE(${populator} "//Automatically generated by CMAKE, external modules" APPEND)
 IF (EXTERNAL_MODULES)
   FOREACH(MOD ${EXTERNAL_MODULES})
@@ -283,7 +297,7 @@ ELSE(EXTERNAL_MODULES)
   WRITE_FILE(${populator} "void add${DISTINCT}ExternalDevices()" APPEND)
   WRITE_FILE(${populator} "{\n//do nothing\n}\n" APPEND)
 ENDIF(EXTERNAL_MODULES)
-ENDIF (EXISTS ${EXTERNAL_MODULES_FILE})
+ENDIF (HACK_POPULATE_DRIVERS)
 
 SET(PROJECT_NAME "${SAVED_TMP}")
 ################ 
@@ -362,7 +376,7 @@ IF (COMPILING_ALL_YARP)
    SET(postfix dev)
    AUX_SOURCE_DIRECTORY(harness harnesscode)
    ADD_EXECUTABLE(harness_${postfix} ${harnesscode})
-   TARGET_LINK_LIBRARIES(harness_${postfix} YARP_dev YARP_sig YARP_OS ${YARP_EXTMOD_TARGETS} ${YARP_dev_EXT_LIBS} ${ACE_LINK_FLAGS})
+   TARGET_LINK_LIBRARIES(harness_${postfix} YARP_dev ${YARP_EXTMOD_TARGETS} ${YARP_dev_EXT_LIBS} ${ACE_LINK_FLAGS} YARP_sig YARP_OS)
    GET_TARGET_PROPERTY(EXEC harness_${postfix} LOCATION)
    
   # add in standard tests
