@@ -86,53 +86,74 @@ SET(folder_source ${folder_source} ${GEN}/yarpdev.cpp)
 ENDMACRO(YarpDevice)
 
 MACRO(BEGIN_DEVICE_LIBRARY devname)
-  INCLUDE(UsePkgConfig)
-  SET(YARP_KNOWN_DEVICE_LIBS ${YARP_KNOWN_DEVICE_LIBS} ${devname})
-  IF (COMPILING_ALL_YARP)
-    SET(YARP_MODULE_PATH "${CMAKE_SOURCE_DIR}/conf")
-  ELSE (COMPILING_ALL_YARP)
-    SET(YARP_MODULE_PATH "${YARP_DIR}/conf")
-  ENDIF (COMPILING_ALL_YARP)
 
-  SET(YARPY_DEVICES TRUE)
-  MESSAGE(STATUS "starting device library: ${devname}")
-  SET(YARPY_DEV_LIB_NAME ${devname})
-  FOREACH(arg ${ARGN})
-    SET(MERGE_DEVICE_LIBS_INIT FALSE)
-    IF (arg STREQUAL "MERGE")
-      SET(MERGE_DEVICE_LIBS_INIT TRUE)
-    ENDIF (arg STREQUAL "MERGE")
-  ENDFOREACH(arg ${ARGN})
-  # commands seem to lurk even if variables are removed
-  IF (COMMAND END_DEVICE_LIBRARY)
-    SET(YARPY_DEVICES_INSTALLED TRUE)
-  ENDIF (COMMAND END_DEVICE_LIBRARY)
+  # reset dependency tracker
+  SET(YARPY_LIB_LIST0)
+  SET(YARPY_XLIB_LIST0)
+  SET(YARPY_SRC_LIST0)
+  SET(YARPY_INC_LIST0)
+  SET(YARPY_LNK_LIST0)
+  SET(YARPY_DEF_LIST0)
+  SET(YARPY_DEV_LIST0)
 
-  SET(YARPY_DEV_GEN ${CMAKE_BINARY_DIR}/generated_code)
-  IF (NOT EXISTS ${YARPY_DEV_GEN})
-	FILE(MAKE_DIRECTORY ${YARPY_DEV_GEN})
-  ENDIF (NOT EXISTS ${YARPY_DEV_GEN})
-  # Choose whether to merge library source code.
-  # ---> now always merge.
-  SET(MERGE_DEVICE_LIBS TRUE)
-  #SET(MERGE_DEVICE_LIBS ${MERGE_DEVICE_LIBS_INIT} CACHE BOOL "Try to pack device libraries together a bit")
-  SET(DEVICE_PREFIX "${devname}_")
-  #SET(DEVICE_PREFIX "yarpdev_")
-  SET(YARPY_LIB_FLAG EXCLUDE_FROM_ALL)
-  IF (NOT YARPY_DEV_LIB_NAME)
-    SET(YARPY_DEV_LIB_NAME devices)
-  ENDIF (NOT YARPY_DEV_LIB_NAME)
+  IF (NOT YARPY_DEVICES)
+    INCLUDE(UsePkgConfig)
+    SET(YARP_KNOWN_DEVICE_LIBS ${YARP_KNOWN_DEVICE_LIBS} ${devname})
+    IF (COMPILING_ALL_YARP)
+      SET(YARP_MODULE_PATH "${CMAKE_SOURCE_DIR}/conf")
+    ELSE (COMPILING_ALL_YARP)
+      SET(YARP_MODULE_PATH "${YARP_DIR}/conf")
+    ENDIF (COMPILING_ALL_YARP)
+    MESSAGE(STATUS "starting device library: ${devname}")
+    SET(YARPY_DEV_LIB_NAME ${devname})
+    SET(YARPY_DEVICES TRUE)
 
-  SET(YARPY_DEV_LIST)
-  SET(YARPY_DEV_SRC_LIST)
+    FOREACH(arg ${ARGN})
+      SET(MERGE_DEVICE_LIBS_INIT FALSE)
+      IF (arg STREQUAL "MERGE")
+        SET(MERGE_DEVICE_LIBS_INIT TRUE)
+      ENDIF (arg STREQUAL "MERGE")
+    ENDFOREACH(arg ${ARGN})
+    # commands seem to lurk even if variables are removed
+    IF (COMMAND END_DEVICE_LIBRARY)
+      SET(YARPY_DEVICES_INSTALLED TRUE)
+    ENDIF (COMMAND END_DEVICE_LIBRARY)
 
-  IF (NOT YARPY_DEVICES_INSTALLED)
-    MESSAGE(STATUS "adding hooks for device library compilation")
-    SET(YARPY_DEVICES_INSTALLED TRUE)
-    INCLUDE(YarpModuleHooks)
-  ENDIF (NOT YARPY_DEVICES_INSTALLED)
+    SET(YARPY_DEV_GEN ${CMAKE_BINARY_DIR}/generated_code)
+    IF (NOT EXISTS ${YARPY_DEV_GEN})
+  	FILE(MAKE_DIRECTORY ${YARPY_DEV_GEN})
+    ENDIF (NOT EXISTS ${YARPY_DEV_GEN})
+    # Choose whether to merge library source code.
+    # ---> now always merge.
+    SET(MERGE_DEVICE_LIBS TRUE)
+    #SET(MERGE_DEVICE_LIBS ${MERGE_DEVICE_LIBS_INIT} CACHE BOOL "Try to pack device libraries together a bit")
+    SET(DEVICE_PREFIX "${devname}_")
+    #SET(DEVICE_PREFIX "yarpdev_")
+    SET(YARPY_LIB_FLAG EXCLUDE_FROM_ALL)
+    IF (NOT YARPY_DEV_LIB_NAME)
+      SET(YARPY_DEV_LIB_NAME devices)
+    ENDIF (NOT YARPY_DEV_LIB_NAME)
 
-  SET(COMPILE_DEVICE_LIBRARY TRUE)
+    SET(YARPY_DEV_LIST)
+    SET(YARPY_DEV_SRC_LIST)
+
+    IF (NOT YARPY_DEVICES_INSTALLED)
+      MESSAGE(STATUS "adding hooks for device library compilation")
+      SET(YARPY_DEVICES_INSTALLED TRUE)
+      INCLUDE(YarpModuleHooks)
+    ENDIF (NOT YARPY_DEVICES_INSTALLED)
+
+    SET(COMPILE_DEVICE_LIBRARY TRUE)
+
+    SET(YARPY_MASTER_DEVICE ${devname})
+
+  ELSE (NOT YARPY_DEVICES)
+
+    MESSAGE(STATUS "nested library ${devname}")
+    SET(DEVICE_PREFIX "${devname}_")
+
+  ENDIF (NOT YARPY_DEVICES)
+
 ENDMACRO(BEGIN_DEVICE_LIBRARY devname)
 
 MACRO(ADD_DEVICE_NORMALIZED devname type include wrapper)
