@@ -111,7 +111,15 @@ MACRO(ADD_SUBDIRECTORY SUBDIR)
     GET_DIRECTORY_PROPERTY(XLIBS DIRECTORY ${SUBDIR} DEFINITION YARPY_XLIB_LIST)
     GET_DIRECTORY_PROPERTY(SRCS DIRECTORY ${SUBDIR} DEFINITION YARPY_SRC_LIST)
     GET_DIRECTORY_PROPERTY(INCS DIRECTORY ${SUBDIR} INCLUDE_DIRECTORIES)
+    GET_DIRECTORY_PROPERTY(INCS2 DIRECTORY ${SUBDIR} DEFINITION YARPY_INC_LIST)
+    IF (INCS2)
+      SET(INCS ${INCS2})
+    ENDIF (INCS2)
     GET_DIRECTORY_PROPERTY(LNKS DIRECTORY ${SUBDIR} LINK_DIRECTORIES)
+    GET_DIRECTORY_PROPERTY(LNKS2 DIRECTORY ${SUBDIR} DEFINITION YARPY_LNK_LIST)
+    IF (LNKS2)
+      SET(LNKS ${LNKS2})
+    ENDIF (LNKS2)
     GET_DIRECTORY_PROPERTY(DEFS DIRECTORY ${SUBDIR} DEFINITION YARPY_DEF_LIST)
     GET_DIRECTORY_PROPERTY(DEVS DIRECTORY ${SUBDIR} DEFINITION YARPY_DEV_LIST)
     GET_DIRECTORY_PROPERTY(ACTS DIRECTORY ${SUBDIR} DEFINITION YARPY_ACTIVE)
@@ -124,6 +132,7 @@ MACRO(ADD_SUBDIRECTORY SUBDIR)
       SET(YARPY_DEF_LIST0 ${YARPY_DEF_LIST0} ${DEFS})
     ENDIF (ACTS)
     SET(YARPY_DEV_LIST0 ${YARPY_DEV_LIST0} ${DEVS})
+
   ELSE (YARPY_DEVICES)
     # pass on call without looking at it
     _ADD_SUBDIRECTORY(${SUBDIR} ${ARGN})
@@ -189,10 +198,30 @@ MACRO(YARP_PREPARE_DEVICES)
 ENDMACRO(YARP_PREPARE_DEVICES)
 
 
-MACRO(END_DEVICE_LIBRARY)
-  YARP_PREPARE_DEVICES()
-  SET(YARPY_DEVICES FALSE)
-ENDMACRO(END_DEVICE_LIBRARY)
+MACRO(END_DEVICE_LIBRARY devname)
+  IF ("${devname}" STREQUAL "${YARPY_MASTER_DEVICE}")
+    #MESSAGE(STATUS "working with ${YARPY_DEV_LIST0}")
+    #MESSAGE(STATUS "working with ${YARPY_SRC_LIST0}")
+    #MESSAGE(STATUS "working with ${YARPY_INC_LIST0}")
+    YARP_PREPARE_DEVICES()
+    SET(YARPY_DEVICES FALSE)
+  ELSE ("${devname}" STREQUAL "${YARPY_MASTER_DEVICE}")
+
+    # we may be a nested subdirectory
+    SET(YARPY_LIB_LIST ${YARPY_LIB_LIST0})
+    SET(YARPY_XLIB_LIST ${YARPY_XLIB_LIST0})
+    SET(YARPY_SRC_LIST ${YARPY_SRC_LIST0})
+    SET(YARPY_INC_LIST ${YARPY_INC_LIST0})
+    SET(YARPY_LNK_LIST ${YARPY_LNK_LIST0})
+    SET(YARPY_DEF_LIST ${YARPY_DEF_LIST0})
+    SET(YARPY_DEV_LIST ${YARPY_DEV_LIST0})
+    SET(YARPY_ACTIVE TRUE)
+
+    #MESSAGE(STATUS "passing back ${YARPY_DEV_LIST}")
+    #MESSAGE(STATUS "passing back ${YARPY_SRC_LIST}")
+    #MESSAGE(STATUS "passing back ${YARPY_INC_LIST}")
+  ENDIF ("${devname}" STREQUAL "${YARPY_MASTER_DEVICE}")
+ENDMACRO(END_DEVICE_LIBRARY devname)
 
 
 ENDIF(NOT COMPILE_DEVICE_LIBRARY)
